SBVTestSuite/TestSuite/CompileTests/PCase/PCase03.stderr
PCase03.hs:12:8: error: [GHC-39584]
    pCase: not usable in declaration context
   |
12 | [pCase|Expr e of
   |        ^^^^^^^^^...

